--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -27,7 +27,15 @@ Project File Date:  07/02/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\51\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+User\main.c(62): warning:  #186-D: pointless comparison of unsigned integer with zero
+          if (newData != LastRxData && newData >= 0 && newData <= 5) {
+User\main.c(431): warning:  #1-D: last line of file ends without a newline
+  }
+User\main.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=14516 RO-data=3440 RW-data=52 ZI-data=1676  
+".\Objects\Project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
