--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -27,6 +27,9 @@ Project File Date:  07/01/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\51\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling Fan.c...
+linking...
+Program Size: Code=22846 RO-data=4594 RW-data=60 ZI-data=1676  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
