--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -27,10 +27,13 @@ Project File Date:  07/01/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\51\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling Fan.c...
+compiling main.c...
+User\main.c(63): warning:  #186-D: pointless comparison of unsigned integer with zero
+          if (newData != LastRxData && newData >= 0 && newData <= 5) {
+User\main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=22846 RO-data=4594 RW-data=60 ZI-data=1676  
-".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=22978 RO-data=4590 RW-data=60 ZI-data=1676  
+".\Objects\Project.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -44,7 +47,7 @@ Package Vendor: Keil
   D:\51\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
