--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -22,18 +22,15 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 e:\trsalatec\ÎÂÊª¶È¼ì²â\Project.uvprojx
-Project File Date:  07/01/2025
+Project File Date:  07/06/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\51\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
-User\main.c(63): warning:  #186-D: pointless comparison of unsigned integer with zero
-          if (newData != LastRxData && newData >= 0 && newData <= 5) {
-User\main.c: 1 warning, 0 errors
+compiling Dth11.c...
 linking...
 Program Size: Code=14540 RO-data=4440 RW-data=60 ZI-data=1676  
-".\Objects\Project.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
