第十二个版本（只有MQ2模拟口未理解）

--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -27,7 +27,7 @@ Project File Date:  07/06/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\51\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling Dth11.c...
+compiling MYRTC.c...
 linking...
 Program Size: Code=14540 RO-data=4440 RW-data=60 ZI-data=1676  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
